frontend/test/context/success/call-before-definition.fc
void foo() {
    bar();
}

void bar() {}
