frontend/test/context/error/shadow-globaldef-with-function.fc
int foo = 1;

void foo() {}
